Исправлено согласно замечаниям